# eda-prototype

./: .env.example  .gitignore  LICENSE  README.md  benchmark_debug.txt  benchmark_debug_2.txt  benchmark_final.txt  benchmark_final_v2.txt  benchmark_final_v3.txt  benchmark_final_v4.txt  benchmark_out.txt  benchmark_out2.txt  pyproject.toml
.github/workflows/: ci.yml
examples/: compile_report.py  query_report.py  run_benchmark.py
src/eda/: __init__.py  cli.py  config.py  tracker.py
src/eda/compiler/: __init__.py  artifacts.py  parser.py  prompts.py  synthesizer.py  validator.py
src/eda/evaluation/: __init__.py  benchmark.py  dataset.py  metrics.py  rag_baseline.py
src/eda/pipeline/: __init__.py  differ.py  recompiler.py  regression.py
src/eda/runtime/: __init__.py  executor.py  formatter.py  router.py
tests/: conftest.py
tests/fixtures/: ground_truth_sample_financial_report.json  sample_financial_report.txt
tests/integration/: test_compile_and_query.py
tests/unit/: test_executor.py  test_formatter.py  test_metrics.py  test_parser.py  test_tracker.py  test_validator.py
